Complete step two for zombie's graphic.